docs/api/qiskit/0.37/qiskit.visualization.dag_drawer.mdx
---
title: dag_drawer (v0.37)
description: API reference for qiskit.visualization.dag_drawer in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.visualization.dag_drawer
---

<span id="qiskit-visualization-dag-drawer" />

# qiskit.visualization.dag\_drawer

<Function id="qiskit.visualization.dag_drawer" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/visualization/dag_visualization.py" signature="dag_drawer(dag, scale=0.7, filename=None, style='color')">
  Plot the directed acyclic graph (dag) to represent operation dependencies in a quantum circuit.

  This function calls the `graphviz_draw()` function from the `retworkx` package to draw the DAG.

  **Parameters**

  *   **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – The dag to draw.
  *   **scale** (*float*) – scaling factor
  *   **filename** (*str*) – file path to save image to (format inferred from name)
  *   **style** (*str*) – ‘plain’: B\&W graph ‘color’ (default): color input/output/op nodes

  **Returns**

  **if in Jupyter notebook and not saving to file,**

  otherwise None.

  **Return type**

  PIL.Image

  **Raises**

  *   [**VisualizationError**](qiskit.visualization.VisualizationError "qiskit.visualization.VisualizationError") – when style is not recognized.
  *   **InvalidFileError** – when filename provided is not valid

  **Example**

  ```python
  %matplotlib inline
  from qiskit import QuantumRegister, ClassicalRegister, QuantumCircuit
  from qiskit.dagcircuit import DAGCircuit
  from qiskit.converters import circuit_to_dag
  from qiskit.visualization import dag_drawer

  q = QuantumRegister(3, 'q')
  c = ClassicalRegister(3, 'c')
  circ = QuantumCircuit(q, c)
  circ.h(q[0])
  circ.cx(q[0], q[1])
  circ.measure(q[0], c[0])
  circ.rz(0.5, q[1]).c_if(c, 2)

  dag = circuit_to_dag(circ)
  dag_drawer(dag)
  ```

  ![../\_images/qiskit.visualization.dag\_drawer\_0\_0.png](/docs/images/api/qiskit/0.37/qiskit.visualization.dag_drawer_0_0.avif)
</Function>

